# velox

./: .claude-tasks.md  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust_desktop_framework_runtime_from_tdesktop.md
crates/velox/: Cargo.toml
crates/velox-animation/: Cargo.toml
crates/velox-animation/src/: animation.rs  crossfade.rs  easing.rs  interpolate.rs  keyframes.rs  lib.rs  manager.rs  spring.rs  tween.rs
crates/velox-app/: Cargo.toml
crates/velox-app/src/: app.rs  builder.rs  handler.rs  key_convert.rs  lib.rs
crates/velox-app/tests/: app_builder_tests.rs  app_tests.rs
crates/velox-codegen/: Cargo.toml
crates/velox-codegen/src/: icon_gen.rs  lang_gen.rs  lib.rs  style_gen.rs
crates/velox-devtools/: Cargo.toml
crates/velox-devtools/src/: frame_stats.rs  inspector.rs  invalidation_overlay.rs  layout_stats.rs  lib.rs  render_stats.rs  resource_graph.rs
crates/velox-list/: Cargo.toml
crates/velox-list/src/: callbacks.rs  height.rs  lib.rs  range.rs  scroll.rs  sticky.rs  virtual_grid.rs  virtual_list.rs
crates/velox-media/: Cargo.toml
crates/velox-media/src/: decode.rs  image_handle.rs  lib.rs  thumbnail.rs
crates/velox-platform/: Cargo.toml
crates/velox-platform/src/: accessibility_bridge.rs  app.rs  clipboard.rs  file_dialog.rs  lib.rs  menu.rs  notification.rs  power.rs  stub.rs  tray.rs
crates/velox-platform/tests/: platform_tests.rs
crates/velox-reactive/: Cargo.toml
crates/velox-reactive/src/: batch.rs  computed.rs  event.rs  lib.rs  signal.rs  subscription.rs  tracking.rs
crates/velox-reactive/tests/: batch_tests.rs  computed_tests.rs  event_tests.rs  signal_tests.rs
crates/velox-render/: Cargo.toml
crates/velox-render/src/: glyph_atlas.rs  glyph_renderer.rs  gpu.rs  image_renderer.rs  lib.rs  paint_utils.rs  rect_renderer.rs  renderer.rs  software.rs  surface.rs  texture_manager.rs
crates/velox-render/src/shaders/: glyph.wgsl  image.wgsl  rect.wgsl
crates/velox-runtime/: Cargo.toml
crates/velox-runtime/src/: cancellation.rs  frame_clock.rs  lib.rs  power.rs  runtime.rs
crates/velox-runtime/src/executor/: compute_pool.rs  deliver.rs  deliver_queue.rs  io_executor.rs  mod.rs  ui_queue.rs
crates/velox-runtime/tests/: cancellation_tests.rs  executor_tests.rs  frame_clock_tests.rs  power_tests.rs  runtime_tests.rs
crates/velox-scene/: Cargo.toml
crates/velox-scene/src/: accessibility.rs  drag.rs  event.rs  event_handler.rs  focus.rs  geometry.rs  hit_test.rs  ime.rs  layout.rs  lib.rs  node.rs  overlay.rs  paint.rs  painter.rs  scene.rs  shortcut.rs  tree.rs
crates/velox-storage/: Cargo.toml
crates/velox-storage/src/: cache.rs  coalesce.rs  error.rs  lib.rs  migration.rs  path.rs  settings.rs  sqlite.rs
crates/velox-style/: Cargo.toml  build.rs
crates/velox-style/src/: color.rs  lib.rs  macros.rs  manager.rs  palette.rs  theme.rs  tokens.rs
crates/velox-style/tokens/: default_theme.toml
crates/velox-text/: Cargo.toml
crates/velox-text/src/: attrs.rs  bidi.rs  buffer.rs  composition.rs  editable.rs  font_system.rs  lib.rs  rasterizer.rs  selection.rs  undo.rs
crates/velox-ui/: Cargo.toml
crates/velox-ui/src/: accessibility.rs  action.rs  active.rs  arena.rs  component.rs  coordinator.rs  cursor.rs  dispatch.rs  drag.rs  element.rs  focus.rs  hover.rs  interactive.rs  layout_engine.rs  length.rs  lib.rs  parent.rs  reconciler.rs  scroll.rs  style.rs  styled.rs  ui_root.rs
crates/velox-ui/src/elements/: canvas.rs  div.rs  img.rs  input.rs  list.rs  mod.rs  overlay.rs  svg.rs  text.rs
crates/velox-window/: Cargo.toml
crates/velox-window/src/: config.rs  lib.rs  managed.rs  manager.rs  window_id.rs
crates/velox-window/tests/: config_tests.rs
crates/velox/examples/: chat_app.rs  demo.rs  particle_life.rs  phase1_smoke.rs  phase3_demo.rs  phase4_demo.rs  phase5_demo.rs
crates/velox/src/: lib.rs
docs/plans/: 2026-03-06-deferred-items-design.md  2026-03-06-phase1-implementation.md  2026-03-06-phase1-runtime-window-shell-design.md  2026-03-06-phase2-implementation.md  2026-03-06-phase2-scene-layout-invalidation-design.md  2026-03-06-phase3-implementation.md  2026-03-06-phase3-render-text-input-design.md  2026-03-06-phase4-implementation.md  2026-03-06-phase4-text-editing-event-routing-design.md  2026-03-06-velox-ui-implementation.md  2026-03-06-velox-ui-primitives-design.md
