[workspace]
resolver = "2"
members = [
    "crates/velox",
    "crates/velox-reactive",
    "crates/velox-platform",
    "crates/velox-runtime",
    "crates/velox-window",
    "crates/velox-app",
    "crates/velox-scene",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
velox = { path = "crates/velox" }
velox-reactive = { path = "crates/velox-reactive" }
velox-platform = { path = "crates/velox-platform" }
velox-runtime = { path = "crates/velox-runtime" }
velox-window = { path = "crates/velox-window" }
velox-app = { path = "crates/velox-app" }
velox-scene = { path = "crates/velox-scene" }
winit = "0.30"
slotmap = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
