[workspace]
resolver = "2"
members = [
    "crates/velox",
    "crates/velox-reactive",
    "crates/velox-platform",
    "crates/velox-runtime",
    "crates/velox-window",
    "crates/velox-app",
    "crates/velox-scene",
    "crates/velox-text",
    "crates/velox-render",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
velox = { path = "crates/velox" }
velox-reactive = { path = "crates/velox-reactive" }
velox-platform = { path = "crates/velox-platform" }
velox-runtime = { path = "crates/velox-runtime" }
velox-window = { path = "crates/velox-window" }
velox-app = { path = "crates/velox-app" }
velox-scene = { path = "crates/velox-scene" }
velox-text = { path = "crates/velox-text" }
velox-render = { path = "crates/velox-render" }
winit = "0.30"
slotmap = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
cosmic-text = "0.12"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
