[workspace]
resolver = "2"
members = [
    "crates/velox",
    "crates/velox-reactive",
    "crates/velox-platform",
    "crates/velox-runtime",
    "crates/velox-window",
    "crates/velox-app",
    "crates/velox-scene",
    "crates/velox-text",
    "crates/velox-render",
    "crates/velox-style",
    "crates/velox-devtools",
    "crates/velox-animation",
    "crates/velox-list",
    "crates/velox-storage",
    "crates/velox-media",
    "crates/velox-codegen",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
velox = { path = "crates/velox" }
velox-reactive = { path = "crates/velox-reactive" }
velox-platform = { path = "crates/velox-platform" }
velox-runtime = { path = "crates/velox-runtime" }
velox-window = { path = "crates/velox-window" }
velox-app = { path = "crates/velox-app" }
velox-scene = { path = "crates/velox-scene" }
velox-text = { path = "crates/velox-text" }
velox-render = { path = "crates/velox-render" }
velox-style = { path = "crates/velox-style" }
velox-devtools = { path = "crates/velox-devtools" }
velox-animation = { path = "crates/velox-animation" }
velox-list = { path = "crates/velox-list" }
velox-storage = { path = "crates/velox-storage" }
velox-media = { path = "crates/velox-media" }
velox-codegen = { path = "crates/velox-codegen" }
winit = "0.30"
slotmap = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
cosmic-text = "0.12"
wgpu = "24"
pollster = "0.4"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
arboard = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
image = "0.25"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
directories = "5"
rfd = "0.15"
tracing = "0.1"
thiserror = "2"
notify-rust = "4"
tray-icon = "0.19"
muda = "0.15"
accesskit = "0.17"
accesskit_winit = "0.23"
softbuffer = "0.4"
tiny-skia = "0.11"
