[package]
name = "velox-platform"
version.workspace = true
edition.workspace = true

[dependencies]
rfd = { workspace = true }
notify-rust = { workspace = true }
tray-icon = { workspace = true }
muda = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }
velox-scene = { workspace = true }
slotmap = { workspace = true }
arboard = { workspace = true }
winit = { workspace = true }
