[package]
name = "velox-render"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
velox-scene = { workspace = true }
velox-text = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
softbuffer = { workspace = true, optional = true }
tiny-skia = { workspace = true, optional = true }

[features]
software-fallback = ["dep:softbuffer", "dep:tiny-skia"]
