[package]
name = "velox-ui"
version.workspace = true
edition.workspace = true

[dependencies]
velox-scene = { workspace = true }
velox-reactive = { workspace = true }
velox-style = { workspace = true }
velox-text = { workspace = true }
velox-list = { workspace = true }
taffy = { workspace = true }
bumpalo = "3"
