[package]
name = "velox"
version.workspace = true
edition.workspace = true

[dependencies]
velox-reactive = { workspace = true }
velox-platform = { workspace = true }
velox-runtime = { workspace = true }
velox-window = { workspace = true }
velox-app = { workspace = true }

[[example]]
name = "demo"
