[package]
name = "velox"
version.workspace = true
edition.workspace = true

[dependencies]
velox-reactive = { workspace = true }
velox-platform = { workspace = true }
velox-render = { workspace = true }
velox-runtime = { workspace = true }
velox-scene = { workspace = true }
velox-text = { workspace = true }
velox-window = { workspace = true }
velox-app = { workspace = true }

[[example]]
name = "demo"

[[example]]
name = "phase1_smoke"

[[example]]
name = "phase3_demo"
