[package]
name = "velox"
version.workspace = true
edition.workspace = true

[dependencies]
velox-reactive = { workspace = true }
velox-platform = { workspace = true }
velox-render = { workspace = true }
velox-runtime = { workspace = true }
velox-scene = { workspace = true }
velox-style = { workspace = true }
velox-text = { workspace = true }
velox-window = { workspace = true }
velox-app = { workspace = true }
velox-devtools = { workspace = true }
velox-animation = { workspace = true }
velox-list = { workspace = true }
velox-storage = { workspace = true }
velox-media = { workspace = true }
velox-codegen = { workspace = true }

[[example]]
name = "demo"

[[example]]
name = "phase1_smoke"

[[example]]
name = "phase3_demo"

[[example]]
name = "phase4_demo"

[[example]]
name = "phase5_demo"
